front: operationalstudies: fix scenario and study card names wrong display when too long
- add names in span then give it "-text" classname suffix
- add elipsis to those classnames

--- a/front/src/modules/scenario/styles/_scenarioCard.scss
+++ b/front/src/modules/scenario/styles/_scenarioCard.scss
@@ -66,6 +66,10 @@
     padding: 0.25rem 0.25rem 0.25rem 0.5rem;
     font-size: 1.1rem;
     transition: 0.4s;
+    &-text {
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
   .scenario-card-description {
     padding: 0.5rem;
